# ink_trace_generation

./: .envrc  README.md  main.py  pyproject.toml
data/: draw_piano_3d_01.csv  test_3d_bezier_trace.csv  test_3d_bezier_trace_01.csv  trajectory_04.csv  trajectory_10.csv
scripts/: draw_xynova_alphabet.sh  run_bezier_even.sh
src/: strokes_recorder.py
test/: draw_coordinte.py  draw_trace3d.py  draw_trace3d_with_bezier_even.py  draw_trace3d_with_bezierhop.py  draw_trace3d_withliftpen.py  test_trace3d_with_ui.py
utils/: smooth_2d_strokes.py  smooth_3d_trace.py
