[project]
name = "ink-trace-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pyvista>=0.47.3",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
